--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,23 @@
     <artifactId>jocker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <url>https://github.com/dockins/jocker</url>
+    <name>Jocker</name>
+    <description>a Java client library for Docker API</description>
+
+    <licenses>
+        <license>
+            <name>BSD</name>
+            <url>https://opensource.org/licenses/BSD-3-Clause</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:ssh://github.com/Dockins/jocker.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/Dockins/jocker.git</developerConnection>
+        <url>https://github.com/Dockins/jocker</url>
+    </scm>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
