--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                         <configuration>
                             <inputSpec>src/main/swagger/docker-api-1.32.yaml</inputSpec>
                             <language>java</language>
-                            <modelPackage>io.dockins.jocker.model</modelPackage>
+                            <modelPackage>it.dockins.jocker.model</modelPackage>
                             <generateModels>true</generateModels>
                             <generateModelDocumentation>false</generateModelDocumentation>
                             <generateApis>false</generateApis>
@@ -76,7 +76,30 @@
                             <configOptions>
                                 <library>okhttp-gson</library>
                                 <dateLibrary>java8</dateLibrary>
-                            </configOptions>                            
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <verbose>true</verbose>
+                            <filesets>
+                                <fileset>
+                                    <directory>${project.build.directory}/generated-sources/swagger/src/main/java/it/dockins/jocker/model</directory>
+                                    <includes>
+                                        <include>PortMap.java</include>
+                                    </includes>
+                                </fileset>
+                            </filesets>
                         </configuration>
                     </execution>
                 </executions>
