see https://github.com/moby/moby/pull/35586

--- a/src/main/swagger/docker-api-1.32.yaml
+++ b/src/main/swagger/docker-api-1.32.yaml
@@ -336,6 +336,7 @@ definitions:
       Memory:
         description: "Memory limit in bytes."
         type: "integer"
+        format: "int64"
         default: 0
       # Applicable to UNIX platforms
       CgroupParent:
