--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>no.fiken.oss.junixsocket</groupId>
-            <artifactId>junixsocket-common</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>no.fiken.oss.junixsocket</groupId>
-            <artifactId>junixsocket-native-common</artifactId>
-            <version>1.0.1</version>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jnr-unixsocket</artifactId>
+            <version>0.23</version>
         </dependency>
 
         <dependency>
@@ -57,11 +52,18 @@
             <artifactId>commons-compress</artifactId>
             <version>1.12</version>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -76,14 +78,14 @@
             <plugin>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>2.2.3</version>
+                <version>2.4.8</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>src/main/swagger/docker-api-1.32.yaml</inputSpec>
+                            <inputSpec>src/main/swagger/docker-api-1.40.yaml</inputSpec>
                             <language>java</language>
                             <modelPackage>it.dockins.jocker.model</modelPackage>
                             <generateModels>true</generateModels>
