--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.timey-wimey</groupId>
+    <groupId>com.docker</groupId>
     <artifactId>jocker</artifactId>
     <version>0.1-SNAPSHOT</version>
 
@@ -34,18 +34,18 @@
         <dependency>
             <groupId>com.github.jnr</groupId>
             <artifactId>jnr-unixsocket</artifactId>
-            <version>0.23</version>
+            <version>0.38.3</version>
         </dependency>
 
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>1.5.23</version>
+            <version>1.5.24</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>2.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -87,7 +87,7 @@
                         <configuration>
                             <inputSpec>src/main/swagger/v1.40.yaml</inputSpec>
                             <language>java</language>
-                            <modelPackage>io.timeywimey.jocker.model</modelPackage>
+                            <modelPackage>com.docker.jocker.model</modelPackage>
                             <generateModels>true</generateModels>
                             <generateModelDocumentation>false</generateModelDocumentation>
                             <generateApis>false</generateApis>
@@ -114,7 +114,7 @@
                             <verbose>true</verbose>
                             <filesets>
                                 <fileset>
-                                    <directory>${project.build.directory}/generated-sources/swagger/src/main/java/io/timeywimey/jocker/model</directory>
+                                    <directory>${project.build.directory}/generated-sources/swagger/src/main/java/com/docker/jocker/model</directory>
                                     <includes>
                                         <include>PortMap.java</include>
                                     </includes>
