split github action script or console is poluted by dependencies downloads
Signed-off-by: Nicolas De Loof <nicolas.deloof@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,5 +17,8 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
 
-      - name: Build and test
-        run: mvn package
+      - name: Compile
+        run: mvn compile
+
+      - name: Test
+        run: mvn test
